--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="public/css/main.css">
+
+  <title>Ian on the Web</title>
+</head>
+<body>
+  <div id="react-root"></div>
+</body>
+<script src="public/javascript/app.bundle.js"></script>
+
+</html>
