Add project tiles as Bulma "card" components | Remove "underconstruction" from index.html

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
           <a data-page="education" class="nav-item is-toggle is-tab nav-tab">Education</a>
           <a data-page="projects" class="nav-item is-toggle is-tab nav-tab">Projects</a>
         </div>
-        <!--<div class="nav-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>-->
 
         <div class="nav-right ">
           <div class="nav-item">
@@ -146,24 +141,66 @@
         </div>
         
         <div class="projects sub-page">
+
           <div class="project-grid">
-            <a href="https://ian-deans.github.io/WebTetris" target="_blank">
-              <figure class="box">
-                <div class="circle">
-                  <img class="circle" src="public/tetrisThumbnail.png" alt="Tetris">
+            
+            <div class="card">
+              <div class="card-content">
+                  <div class="media">
+                    <div class="media-left">
+                      <a target="_blank" href="https://ian-deans.github.io/WebTetris">
+                      <figure class="image is-48x48">
+                        <img class="" src="public/tetrisThumbnail.png" alt="Web Tetris">
+                      </figure>
+                      </a>
+                    </div>
+                      <div class="media-content">
+                        <p class="title is-4">Web Tetris </p>
+                        <p class="subtitle is-6">
+                          <a target="_blank" href="https://github.com/ian-deans/react-tetris">
+                            <span>Github Repsitory</span>
+                          </a>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="content">
+                    A version of the classic game Tetris built for the web using React/Redux, Node.js,
+                    and Express. A partner and I had a week to build this game; the live version only
+                    has basic functionality at the moment, but the development version currently supports
+                    multiplayer vs mode. In this mode a player can drop extra pieces into their opponents
+                    game upon a certain amount of line completions.
+                  </div>
                 </div>
-              </figure>
-              </a>
-              <a href="https://ian-deans.github.io/CelebrityBlackjack" target="_blank">
-              <figure class="box">
-                <img class="circle" src="public/blackjackThumbnail.png" alt="Blackjack">
-              </figure>
-              </a>
-              <a href="">
-              <figure class="box">
-                <img class="circle" src="http://placehold.it/150x150" alt="s">
-              </figure>
-              </a>
+            </div>
+
+            <div class="card">
+
+              <div class="card-content">
+                  <div class="media">
+                    <div class="media-left">
+                      <a target="_blank" href="https://ian-deans.github.io/CelebrityBlackjack">
+                      <figure class="image is-48x48">
+                        <img class="" src="public/blackjackThumbnail.png" alt="Blackjack">
+                      </figure>
+                      </a>
+                    </div>
+                      <div class="media-content">
+                        <p class="title is-4">Blackjack</p>
+                        <p class="subtitle is-6">
+                            <a target="_blank" href="https://github.com/ian-deans/merciful-eland">
+                              <span>Github Repsitory</span>
+                            </a>
+                          </p>
+                      </div>
+                  </div>
+                  <div class="content">
+                    This blackjack game was a project a few guildmates and I put together one week. We built it in React
+                    and it is a single player ( with AI opponents ) blackjack game hosted (unofficially) by Jeff Goldblum. 
+                    Warning: the actualy animations have yet to be added.
+                  </div>
+                </div>
+            </div>
+
           </div>
         </div>
 
@@ -172,10 +209,8 @@
       <aside class="column page-sidebar is-one-third">
 
         <div class="tile is-vertical">
-              <figure class="image">
-                <div class="frame-border">
+              <figure class="image is-256x256">
                   <img class="circle" src="http://placehold.it/200x200">
-                </div>
             </figure>
           <div class="bio-blurb blurb tile is-child">
             blurb blurb blurb blurb blurb blurb blurb blurb blurb blurb blurb blurb 
