--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                         <img src="images/bootstrap.jpeg"class="skill-logo">
                         <img src="images/meteor.png"class="skill-logo">
                         <img src="images/bash.png"class="skill-logo">
+                        <img src="images/reactnative.png"class="skill-logo">
                     </div>
                 </div>
                 
@@ -326,7 +327,7 @@
                 <li><a href="https://github.com/ian-deans" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://twitter.com/ideans715" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/ian-deans-339975bb/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#" target="_blank" class="udacity"><i class="fa fa-underline"></i></a></li>
+                <li><a href="https://profiles.udacity.com/p/3421249191" target="_blank" class="udacity"><i class="fa fa-underline"></i></a></li>
             </ul>
         </div>
 
