--- a/index.html
+++ b/index.html
@@ -378,8 +378,9 @@
             <ul class="social-icon">
                 <li><a href="https://github.com/ian-deans" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://twitter.com/ideans715" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/ian-deans-339975bb/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ian-deans/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://profiles.udacity.com/p/3421249191" target="_blank" class="udacity"><i class="fa fa-underline"></i></a></li>
+                <li><a href="https://plus.google.com/115183023508613155894?rel=author" rel=author target="_blank" class="udacity"><i class="fa fa-google-plus-square"></i></a></li>
             </ul>
         </div>
 
