Add contribution card for Trossello.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" target="_blank" href="https://twitter.com/ideans715">Twitter</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="public/ian-deans-resume.pdf" download>Resume</a>
+              <a class="nav-link" href="https://drive.google.com/uc?export=download&id=0B-GxJA1Ru6HXc2xtaG4tLUtmRkE" download>Resume</a>
             </li>
           </ul>
         </div>
@@ -83,10 +83,10 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <div class="card-body">
+            <div class="card-body" title="LOS - Learning Operating System: Open Source Software developed by Learner's Guild for use by its members.">
               <h2 class="card-title">Echo (LOS) <br> Learner's Guild</h2>
               <p class="card-text">
-                Main application in the OSS project the Learning Operating System. Integrated with GitHub and Slack.
+                Main application in the Learning Operating System.  Integrated with GitHub and Slack.
                 <br><br>
                 Technology:<br>
                 Service Oriented Architecture, Node.js, Express, Javascript(ES6/7), React, Redux, GraphQL, RethinkDB, Redis, Webpack, Mocha/Chai.
@@ -100,7 +100,7 @@
         <!-- /.col-md-4 -->
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <div class="card-body">
+            <div class="card-body" title="LOS - Learning Operating System: Open Source Software developed by Learner's Guild for use by its members.">
               <h2 class="card-title">idm (LOS) <br> Learner's Guild</h2>
               <p class="card-text">
                 Identity management for the Learning Operating System. Stores, maintains, and validates all user data used by Echo. Integrated with GitHub, HubSpot, Slack.
@@ -115,17 +115,22 @@
           </div>
         </div>
         <!-- /.col-md-4 -->
-        <!-- <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card Three</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+              <h2 class="card-title">Trossello</h2>
+              <p class="card-text">
+                An open source clone of Trello. Used as a starting point for new developers to get accustomed to collaborating in a professional environment.
+                <br><br>
+                Technology:<br>
+                JavaScript(ES6), Node.js, Express, React, Babel, ESLint, JQuery, SaSS, PostgreSQL, Knex, Webpack, Selenium, Mocha/Chai.
+              </p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">More Info</a>
+              <a href="https://github.com/ian-deans/Trossello" target="_blank" class="btn btn-primary">Repo</a>
             </div>
           </div>
-        </div> -->
+        </div>
         <!-- /.col-md-4 -->
 
       </div>
