Add commit links to each contribution card

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <!-- /.col-lg-8 -->
         <div class="col-lg-6">
-          <h1>Ian Deans</h1>
+          <h1></h1>
           <p>
             &nbsp;&nbsp;Hi, my name is Ian Deans. I'm a technologist currently wearing the hat of web developer living the San Francisco Bay Area. I have a passion for creating and learning. And if I can learn while I create, all the better. 
             <br><br>
@@ -91,6 +91,23 @@
                 Technology:<br>
                 Service Oriented Architecture, Node.js, Express, Javascript(ES6/7), React, Redux, GraphQL, RethinkDB, Redis, Webpack, Mocha/Chai.
               </p>
+              <ul>
+                <li>
+                  <a href="https://github.com/LearnersGuild/echo/commit/335b23389962b725204c8aa90dc8924ba34f70ec" target="_blank">Refactor / New Feature</a>
+                </li>
+                <li>
+                  <a href="https://github.com/LearnersGuild/echo/commit/daba5abb5f53494102434ae07730c2cafbe5dfa2" target="_blank">Bugfix</a>
+                </li>
+                <li>
+                  <a href="https://github.com/LearnersGuild/echo/commit/bc239931777d170dc8ab1737746fcaeb6465e1b1" target="_blank">Database Migration</a>
+                </li>
+                <li>
+                  <a href="https://github.com/LearnersGuild/echo/commit/56e016f29c88258b152bdf869d8d03dee6188533" target="_blank">Refactor</a>
+                </li>
+                <li>
+                  <a href="https://github.com/LearnersGuild/echo/commit/04a560b178b579c176aaed90484bab6eadf71741" target="_blank">Refactor</a>
+                </li>
+              </ul>
             </div>
             <div class="card-footer">
               <a href="https://github.com/LearnersGuild/echo" target="_blank" class="btn btn-primary">Repo</a>
@@ -108,6 +125,9 @@
                 Technology:<br>
                 Service Oriented Architecture, Node.js, Express, Javascript(ES6/7), React, Redux, GraphQL, RethinkDB, Redis, Webpack, Ava.
               </p>
+              <ul>
+                <li><a href="https://github.com/LearnersGuild/idm/commit/9c0be621f37fa63be8cf8a714297ffd43e8783ab" target="_blank">New Feature</a></li>
+              </ul>
             </div>
             <div class="card-footer">
               <a href="https://github.com/LearnersGuild/idm" target="_blank" class="btn btn-primary">Repo</a>
