--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" target="_blank" href="https://twitter.com/ideans715">Twitter</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://drive.google.com/uc?export=download&id=0B-GxJA1Ru6HXc2xtaG4tLUtmRkE" download>Resume</a>
+              <a class="nav-link" href="https://drive.google.com/file/d/0B-GxJA1Ru6HXc2xtaG4tLUtmRkE/view" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
