Update email to reflect new email address.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <meta name="author" content="ian-deans">
 
     <title>ian-deans</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
     <link href="public/css/steeze.css" rel="stylesheet">
 
   </head>
@@ -39,6 +35,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://twitter.com/ideans715">Twitter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mailto:contact@ian-deans.com" target="_blank">Email</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://drive.google.com/file/d/0B-GxJA1Ru6HXc2xtaG4tLUtmRkE/view" target="_blank">Resume</a>
