add basic html structure and css feel

--- a/new_index.html
+++ b/new_index.html
@@ -1,45 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="ian-deans">
+
+    <meta name="description" content="Ian Deans - Programmer">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="public/css/new_style.css">
+
     <title>Document</title>
 </head>
+
 <body>
 
     <header>
-        Picture
-        summary
+        <figure id="avatar">
+            <img width="200px" src="public/images/avatar.jpeg" alt="" />
+        </figure>
+        <div>
+            <h2>
+                Ian Deans
+            </h2>
+            <p>
+                Rope's end keelhaul draft avast quarter clipper topsail barkadeer careen heave down. Weigh anchor piracy
+                hang the jib transom Admiral of the Black reef cackle fruit heave to Pieces of Eight belay. Arr black
+                spot nipper Barbary Coast aye Jack Tar dance the hempen jig bilge rat gaff lee.
+                Code of conduct six pounders topgallant bilge rat piracy square-rigged hardtack Davy Jones' Locker blow
+                the man down scuppers. Gally coffer nipper blow the man down Pirate Round haul wind Shiver me timbers
+                Buccaneer chandler Jack Tar. Prow measured fer yer chains driver tender chase guns dead men tell no
+                tales furl nipperkin Cat o'nine tails booty.
+            </p>
+
+
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li>LinkedIn</li>
-            <li>Github</li>
-            <li>Email</li>
-            <li></li>
-        </ul>
+    <nav id="navbar">
+        <span>LinkedIn</span>
+        <span>Github</span>
+        <span>Email</span>
+        <span>Resume</span>
 
     </nav>
 
-    <section>
-        Articles Read
+    <section id="articles">
+        <h3>Recent Reads</h3>
     </section>
 
-    <section>
-        Code Sources
+    <section id="codesources">
+        <h3>
+            Code Sources
+        </h3>
         git hub | code pen
     </section>
 
-    <section>
-        Competitive Coding
+    <section id="coding">
+        <h3>
+            Competitive Coding
+        </h3>
         hackerrank | code wars
     </section>
 
-    <section>
-        Job Sites
+    <section id="jobsites">
+        <h3>
+            Job Sites
+        </h3>
         Dice | Hired | Glassdoor | Nuevoo | ZipRecruiter
     </section>
 
 </body>
+
 </html>
