--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="public/css/new_style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
 
     <title>Document</title>
 </head>
