--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </header>
 
     <nav id="navbar">
-        <span>LinkedIn</span>
-        <span>Github</span>
-        <span>Email</span>
-        <span>Resume</span>
+        <span><a href="http://www.linkedin.com/in/ian-deans">LinkedIn</a></span>
+        <span><a href="https://github.com/ian-deans">Github</a></span>
+        <span><a>Email</a></span>
+        <span><a href="https://drive.google.com/file/d/11NnEVIDTNkFn977llvZf0gPaK6Cnj0-f/view?usp=sharing">Resume</a></span>
 
     </nav>
 
