--- a/index.html
+++ b/index.html
@@ -2,51 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="ian-deans">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="ian-deans" />
 
-    <meta name="description" content="Ian Deans - Programmer">
+    <meta name="description" content="Ian Deans - Programmer" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css" />
 
     <title>Document</title>
 </head>
 
 <body>
-
     <header>
         <figure id="avatar">
             <img width="200px" src="public/images/avatar.jpeg" alt="" />
         </figure>
         <div>
-            <h2>
-                Ian Deans
-            </h2>
+            <h2>Ian Deans</h2>
             <p>
-                Rope's end keelhaul draft avast quarter clipper topsail barkadeer careen heave down. Weigh anchor piracy
-                hang the jib transom Admiral of the Black reef cackle fruit heave to Pieces of Eight belay. Arr black
-                spot nipper Barbary Coast aye Jack Tar dance the hempen jig bilge rat gaff lee.
-                Code of conduct six pounders topgallant bilge rat piracy square-rigged hardtack Davy Jones' Locker blow
-                the man down scuppers. Gally coffer nipper blow the man down Pirate Round haul wind Shiver me timbers
-                Buccaneer chandler Jack Tar. Prow measured fer yer chains driver tender chase guns dead men tell no
-                tales furl nipperkin Cat o'nine tails booty.
+                Rope's end keelhaul draft avast quarter clipper topsail barkadeer
+                careen heave down. Weigh anchor piracy hang the jib transom Admiral of
+                the Black reef cackle fruit heave to Pieces of Eight belay. Arr black
+                spot nipper Barbary Coast aye Jack Tar dance the hempen jig bilge rat
+                gaff lee. Code of conduct six pounders topgallant bilge rat piracy
+                square-rigged hardtack Davy Jones' Locker blow the man down scuppers.
+                Gally coffer nipper blow the man down Pirate Round haul wind Shiver me
+                timbers Buccaneer chandler Jack Tar. Prow measured fer yer chains
+                driver tender chase guns dead men tell no tales furl nipperkin Cat
+                o'nine tails booty.
             </p>
-
-
         </div>
     </header>
 
     <nav id="navbar">
-        <span><a href="http://www.linkedin.com/in/ian-deans">LinkedIn</a></span>
-        <span><a href="https://github.com/ian-deans">Github</a></span>
+        <span><a target="_blank" href="http://www.linkedin.com/in/ian-deans">LinkedIn</a></span>
+        <span><a target="_blank" href="https://github.com/ian-deans">Github</a></span>
         <span><a>Email</a></span>
-        <span><a href="https://drive.google.com/file/d/11NnEVIDTNkFn977llvZf0gPaK6Cnj0-f/view?usp=sharing">Resume</a></span>
-
+        <span><a
+                target="_blank" href="https://drive.google.com/file/d/11NnEVIDTNkFn977llvZf0gPaK6Cnj0-f/view?usp=sharing">Resume</a></span>
     </nav>
 
     <section id="articles">
@@ -54,26 +52,26 @@
     </section>
 
     <section id="codesources">
-        <h3>
-            Code Sources
-        </h3>
+        <h3>Code Sources</h3>
         git hub | code pen
+
+        <iframe src="https://codepen.io/ideans715/pen/rNMbEyw" title="gif Search"></iframe>
     </section>
 
     <section id="coding">
-        <h3>
-            Competitive Coding
-        </h3>
+        <h3>Competitive Coding</h3>
         hackerrank | code wars
     </section>
 
     <section id="jobsites">
-        <h3>
-            Job Sites
-        </h3>
+        <h3>Job Sites</h3>
         Dice | Hired | Glassdoor | Nuevoo | ZipRecruiter
     </section>
 
+    <section id="games">
+        <h3>Come Play With Me</h3>
+        Steam Games
+    </section>
 </body>
 
 </html>
