add codewars link

--- a/index.html
+++ b/index.html
@@ -55,17 +55,26 @@
         <h3>Code Sources</h3>
         git hub | code pen
 
-        <iframe src="https://codepen.io/ideans715/pen/rNMbEyw" title="gif Search"></iframe>
     </section>
 
     <section id="coding">
         <h3>Competitive Coding</h3>
-        hackerrank | code wars
-    </section>
+
+        <a href="https://www.codewars.com/users/fryymann715">
+            <figure>
+                <img src="public/images/codewars.PNG">
+            </figure>
+        </a>
+        </section>
 
     <section id="jobsites">
         <h3>Job Sites</h3>
         Dice | Hired | Glassdoor | Nuevoo | ZipRecruiter
+        <a href="https://www.codewars.com/users/fryymann715">
+            <figure>
+                <img src="public/images/dice.PNG">
+            </figure>
+        </a>
     </section>
 
     <section id="games">
