add title to html page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="public/css/style.css" />
 
-    <title>Document</title>
+    <title>Ian Deans</title>
 </head>
 
 <body>
